--- a/views/tpl/head.html.twig
+++ b/views/tpl/head.html.twig
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Le Pélican | Le Pélican est une application vous permettant de préparer votre retraire à l'étrangé</title>
-    <meta name="description" content="">
+    <meta name="description" content="Le Pélican, votre assistant pour vous installer sereinement à l'étranger.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap -->
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- fullpage css -->
     <link rel="stylesheet" type="text/css" href="{{ asset('/lib/fullpage/jquery.fullPage.css') }}" />
+    <!-- messenger css -->
+    <link rel="stylesheet" type="text/css" href="{{ asset('/lib/messenger/jquery.fbmessenger.css') }}" />
     <!-- normalize css -->
     <link rel="stylesheet" href="{{ asset('/css/normalize.css') }}">
     <!-- main css -->
@@ -35,9 +37,24 @@
     </script>
     -->
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-P54NKRP');</script>
+    <!-- End Google Tag Manager -->
+
 </head>
 
 <body class="">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P54NKRP" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
