ma bite sur la commode

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -37,8 +37,8 @@
                                 <p>Il serait peut être temps de</p>
                                 <p><strong>changer votre routine...</strong></p>
                             </div>
-                            <div class="manifesto_jumbo_cta animated fadeInDown">
-                                <a id="manifesto_video" class="btn btn-default btnpelican" href="#explainer" data-toggle="modal" data-target="#modal_video">Voir la vidéo</a>
+                            <div class="animated fadeInDown section_cta">
+                                <a id="manifesto_video" class="" href="#explainer" data-toggle="modal" data-target="#modal_video">Voir la vidéo <i class="fa fa-angle-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -167,9 +167,9 @@
                     <div class="manifesto_assistant_desc">
                         <div class="manifesto_assistant_desc_inside">
                             <div class="manifesto_assistant_desc_title section_title">
-                                <!--
+
                                 <p><img src="{{ asset('/img/messengericon.png') }}" alt="icon"></p>
-                                -->
+
                                 Votre assistant avec vous, partout.
                             </div>
                             <div class="manifesto_assistant_desc_txt section_txt">
